[package]
name = "mcmonarch_web"
version = "0.1.0"
authors = ["Alexander Launi <alex.launi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
actix-web = "3"
actix-files = "0.3.0"
actix-http = "2.0"
actix-rt = "1.1.1"
futures = "0.3.5"
color-eyre = "0.5.4"
tokio = { version = "0.2", features = ["full"] }
tokio-test = "0.2.1"

[dev-dependencies]
reqwest = "0.10.8"
tokio = "0.2.22"
